--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.1",
     "clsx": "^2.1.1",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
