--- a/env.example
+++ b/env.example
@@ -14,5 +14,6 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_signing_secret_here
 
-# n8n Webhook URL (will be added later)
-# N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/...
+# n8n Webhook Configuration
+N8N_ORDER_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
+N8N_WEBHOOK_SIGNING_SECRET=your-random-signing-secret-here
