feat: unique songs for reviews, Supabase session storage, phone input fix, gender label fix
- Add 38 new songs to public/Musical-Content/Songs/ and public/music/
- Rewrite songs.ts with all 42 mp3s sorted alphabetically (no modulo cycling)
- Rewrite reviews.ts with unique song assignment + build-time guard
- Replace in-memory session data Map with Supabase-backed storage
- Stripe webhook now queries Supabase directly (no HTTP self-call)
- Fix phone input: use library PhoneInput component with CSS import for flags
- Fix Step 1 gender label: 'What is your gender?' -> 'What is their gender?'
- Add session_data table migration SQL
- Add gender fields migration SQL
- Add playlist page, schema components, debug logger, trust strip
- Update SEO pages, navigation, FAQ, sitemap

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# source song files (copies live in public/Musical-Content/Songs/)
+/SongGift.app 38 songs/
