--- a/env.example
+++ b/env.example
@@ -11,8 +11,11 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 # Stripe Configuration
+# Use sk_test_... for Test Mode, sk_live_... for Live Mode
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_signing_secret_here
+# Publishable key (safe for client-side) — use pk_test_... or pk_live_... matching your secret key
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
 # n8n Webhook Configuration
 N8N_ORDER_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
@@ -20,3 +23,7 @@ N8N_WEBHOOK_SIGNING_SECRET=your-random-signing-secret-here
 
 # Newsletter Webhook Configuration
 N8N_NEWSLETTER_WEBHOOK_URL=https://n8n.srv1104211.hstgr.cloud/webhook-test/2ea70888-7981-4ab5-a807-95f83e07339a
+
+# Debug Logging (set to "true" to enable verbose server-side payload logging)
+# WARNING: Do NOT enable in production — outputs detailed request/response data to logs
+DEBUG_LOGGING=false
