--- a/env.example
+++ b/env.example
@@ -18,7 +18,7 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_signing_secret_here
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
 # n8n Webhook Configuration
-N8N_ORDER_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
+N8N_ORDER_WEBHOOK_URL=https://n8n.srv1104211.hstgr.cloud/webhook/your-webhook-id
 N8N_WEBHOOK_SIGNING_SECRET=your-random-signing-secret-here
 
 # Newsletter Webhook Configuration
